# Tifini3

./: CMakeLists.txt  Config.cmake.in  Doxyfile  LICENSE  Tifini3Config.h.in
Modules/: FindHYDRA.cmake
lib/: CMakeLists.txt
lib/extras/: CMakeLists.txt
lib/extras/inc/: KBeamCalibration.h  LinkDef.h
lib/extras/src/: KBeamCalibration.cxx
lib/hydra1comp/: CMakeLists.txt
lib/hydra1comp/inc/: HParticleCand.h  HParticleCandSim.h  LinkDef.h
lib/hydra1comp/src/: HParticleCand.cxx  HParticleCandSim.cxx
lib/tifini/: CMakeLists.txt
lib/tifini/inc/: KAbstractAnalysis.h  KFitTools.h  KTifiniAnalysis.h  KTrackInspector.h  LinkDef.h
lib/tifini/src/: KAbstractAnalysis.cxx  KFitTools.cxx  KTifiniAnalysis.cxx  KTrackInspector.cxx  Makefile
lib/tools/: CMakeLists.txt
lib/tools/inc/: KBetaPlots.h  KCut.h  KCutBigger.h  KCutEqual.h  KCutInside.h  KCutNotEqual.h  KCutOutside.h  KCutSmaller.h  KPlots.h  KPlotsBeta.h  KPlotsdEdx.h  KTools.h  KTrack.h  KTrackReconstructor.h  KVector.h  KVertex.h  KdEdxPlots.h  LinkDef.h
lib/tools/src/: KBetaPlots.cxx  KCutSmaller.cxx  KPlots.cxx  KPlotsBeta.cxx  KPlotsdEdx.cxx  KTools.cxx  KTrack.cxx  KTrackReconstructor.cxx  KVector.cxx  KVertex.cxx  KdEdxPlots.cxx
lib/tools/tests/: CMakeLists.txt  kcuts_tests.cpp  test_runner.cpp
